--- a/opencv.ipynb
+++ b/opencv.ipynb
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -231,10 +231,46 @@
     {
      "data": {
       "text/plain": [
-       "{'error_code': 'SDK101', 'error_msg': 'image length error'}"
+       "{'direction': 0,\n",
+       " 'log_id': 1341271329,\n",
+       " 'words_result': [{'words': ' Preview file edit view go tools window help'},\n",
+       "  {'words': ' case _ . png'},\n",
+       "  {'words': '骨科入院记录'},\n",
+       "  {'words': '姓名:程喜佑性别:男'},\n",
+       "  {'words': '年龄:53岁科室:骨伤科'},\n",
+       "  {'words': '病区:二病区'},\n",
+       "  {'words': '床号:32'},\n",
+       "  {'words': '住院号:12001332民族:汉族婚姻:已婚'},\n",
+       "  {'words': '职业:农民'},\n",
+       "  {'words': '住址:安徽省黄山市休宁县'},\n",
+       "  {'words': '出生地:安徽黄山发病节气'},\n",
+       "  {'words': '病史陈述者(关系)'},\n",
+       "  {'words': '病史了解程度:可靠'},\n",
+       "  {'words': '入院时间:2012-07-2814:34'},\n",
+       "  {'words': '记录时间:2012-07-2911:08'},\n",
+       "  {'words': '主诉:跌伤右髋肿痛3小时'},\n",
+       "  {'words': '现病史:患者于3小时前干活时不憤跌倒,致右骸部肿胀、疼痛、活动受限,遂由家属送至我院就诊,'},\n",
+       "  {'words': '门诊摄线片示“右股骨转子间骨折”,门诊拟诊:“右股骨转子间骨折”收住入科。病程中'},\n",
+       "  {'words': '无昏迷、恶心、呕吐,无腹胀、瞑痛,无肢体感觉障碍'},\n",
+       "  {'words': '既往史:平素健康状况:良好'},\n",
+       "  {'words': '疾病史:不详传染病史:不详预防接种史:不详预防接种药品:-'},\n",
+       "  {'words': '手术外伤史:手术:无手术名称及时间:'},\n",
+       "  {'words': '外伤:无外伤情况及时间'},\n",
+       "  {'words': '输血史:不详输血时间'},\n",
+       "  {'words': '输血反应:不详'},\n",
+       "  {'words': '药物过敏史:不详过敏药物名称:'},\n",
+       "  {'words': '个人史:经常居留地:本地,地方病地区居住史:无。'},\n",
+       "  {'words': '吸烟史:无平均-支/日时间-年,饮酒史:无平均-两/日时间-年'},\n",
+       "  {'words': '毒品接触史:无毒品名称:'},\n",
+       "  {'words': '时间:'},\n",
+       "  {'words': '婚育史:配偶健康状况良好。'},\n",
+       "  {'words': '家族史:否认家族遗传性病史'},\n",
+       "  {'words': '体格检查'},\n",
+       "  {'words': '全身情况:T:36.4℃;P:81次份分;R:20次/分;BP:146/71mnHg(kPa)'}],\n",
+       " 'words_result_num': 34}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
